2002-07-09  Derek Atkins  <derek@ihftp.com>

	* "global-replace for-each-in-order for-each" because the former
	  does not exist in current guiles.  Fixes bugID 87693

	* add "centered-label-cell" markup type to define a cell with tag
	  'b' and attribute "align center".

2002-07-08  Derek Atkins  <derek@ihtfp.com>

	* kvp-option-registry.scm: create a registry of kvp-options
	  generators for various objects.  This simplifies the distributed
	  generation of kvp-option dialogs.
	* app-utils.scm: export kvp-option-registry functions
	* option-util: add option_db_changed() function
	* business-gnome.scm: add "File -> File Preferences" menu item
	  which is the kvp-option dialog for the Book.
	* business-prefs.scm: register a kvp-option generator for gnc:id-book 
	* gnc-book: add gnc_book_kvp_changed() function
	* gw-engine-spec.scm: wrap gnc_book_kvp_changed
	* dialog-options.c: only call the SCM apply_cb if the optiondb
	  actually changed.
	* gnome-utils.scm: create gnc:kvp-option-dialog procedure to create
	  an kvp-option dialog for the speficied type.  Export this procedure.

2002-07-07  Derek Atkins  <derek@ihtfp.com>

	* options.scm: change gnc:make-option; add two new args, scm->kvp
	  and kvp->scp.  Implement these two methods for most of the options.
	* app-utils.scm: export the kvp->scm and scm->kvp procedures
	* business-options.scm: Implement the kvp->scm and scm->kvp methods
	  for the business options.

	* hooks.scm: fix documentation
	* gnc-file.c: change the open/closed book hooks to take a
	  <gnc:Session*> instead of a string.
	* binary-import.scm: fix the book-opened-hook.
	* main-window.scm: fix the book-opened/closed-hook calls
	* main.scm: fix the book-opened/closed-hook calls	  

	* gw-app-utils-spec.scm: wrap <gnc:OptionDB*>, option_db_new,
	  option_db_destroy()
	* options.scm: fix scm->kvp method; fix a typo; add clear-kvp?
	  argument to gnc:options-scm->kvp for whether to clear out the
	  kvp before saving it.